Updated windows to handle duplicates so we can open multiple of the same window. Also updated z-index for windows to be handled better instead of just relying on active class to put it add z-index 100. It will not start their indexes at 10 and just add to that going forward. When the lowest zindex on any given window is below 200, it will go through all the windows and arrange their z-index again so they wont go too high. This will cause bugs now that I start thinking about it more, so will rethink this. I want to rearrange the windows based on their current z-index, not their index in the windows array. Think Anthon..

--- a/src/components/OSEmulator/PC/styles-win98.module.css
+++ b/src/components/OSEmulator/PC/styles-win98.module.css
@@ -244,7 +244,7 @@
 
 
 .startMenu {
-    z-index: 200;
+    z-index: 20000;
 
     position: absolute;
     bottom: calc(var(--bottom-height) - 1px);
@@ -512,7 +512,7 @@
     flex-direction: column;
 
     &.active {
-        z-index: 90;
+        /* z-index: 90; */
         border-color: #1084d0;
     }
 
